# paper-writer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PREEXISTING-TYPE-ISSUES.md  README.md  TECHNICAL_BOOTSTRAP.md  autoresearch-results.tsv  autoresearch.ideas.md  autoresearch.jsonl  gate-report.json  pyproject.toml  readme_tf.md  skill.md  test.bib
.claude/: context-memory-id
.fork/: init.yaml
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  live-smoke.yml  release.yml  security.yml
.qoder/: settings.local.json
.trifecta/: graph.db  metrics.jsonl
_ctx/: trifecta_config.json
audit_artifacts/: 00_comandos_ejecutados.md  00_resumen.md  01_topologia.md  02_red_y_puertos.txt  03_firewall.txt  04_docker.txt  05_proxy.txt  06_security_audit.txt  07_logs_findings.md  08_secrets_inventory.md  09_rotation_plan.md  10_vscode_check.md
autoresearch/paper-writer/: final_report.md  (+2 more)
benchmarks/: RIGOROUS_AUDIT.sh  gentle_evidence_audit.py  mcp_parity_test.py  mcp_parity_verify.py  mcp_skill_gap_socket_test.py  mcp_skill_gap_stdio_test.py  mcp_skill_gap_stdio_test_v2.py  mcp_skill_gap_stdio_test_v3.py  mcp_skill_gap_test.py  paso1_baseline.py  paso2_baseline.py  session_integrity_audit.py  trifecta_integration_bench.py  verify_hardening_audit.py  verify_mcp_agent_docs.py  verify_skill_alignment.py
clients/: __init__.py  _retry.py  _text_similarity.py  arxiv.py  crossref.py  llm_content.py  openalex.py  semantic_scholar.py  trifecta.py  zotero.py
docs/: ARS-PORTING-OPPORTUNITIES.md  AUDIT_CHECKLIST_001.md  CODE_ISSUES_LOG.md  DOCUMENT_GOVERNANCE.md  ENVIRONMENT_AND_INSTALL.md  GATE_SYSTEM.md  HARNESS_AND_STATE_MACHINE.md  MANIFEST_SPEC.md  MULTI_PROJECT_SPEC.md  ORCHESTRATOR_SPEC.md  PHASE_LEDGER.md  PRODUCTION_READINESS.md  Q2_PUBLICATION_READINESS.md  REPO_ARCHITECTURE.md  SKILLS_VENDORING.md  SKILL_ADAPTERS_SPEC.md  STATE_MANAGER_SPEC.md  TESTING_STRATEGY.md  VALIDATOR_CONTRACTS.md  ab-test-results.md  flujo_falp.md  graph-audit-findings.md  orphan-detection-use-cases.md  trifecta-extension-guide.md  trifecta-mcp-agent-guide.md  trifecta-test-results.md
engine/: deduplicator.py  formatter.py  loader.py  matcher.py  registry.py
harness/: domain_state.py  gates.py  orchestrator.py  state_manager.py  state_repository.py
integrations/: __init__.py
openspec/: config.yaml
outputs/: .run_id  ARS-vs-paper-writer-comparison.html  ars-diff-skill-recommendations.md  authority-flow-audit-report.md  code-path-cartographer-report.md  latest  manifest.yaml  review_config.yaml  state.yaml
parsers/: manuscript.py  source_map.py
schemas/: claim_audit.schema.json  finding.schema.json  method_gate.schema.json  prose_audit.schema.json
scripts/: ab-test-extension.sh  ab-test-runner.sh  ab-test-task-oracle.txt  eval_paper_writer_reliability.py  setup-github.sh  test_cli_full.py  test_pipeline_e2e.py
skills/: __init__.py
skills/local/mesh-import/: pyproject.toml
skills/local/mesh-import/src/mesh_import/: __init__.py  cli.py  export.py  migration.py  models.py  normalize.py  parser.py  store.py  validation.py
skills/local/mesh-import/tests/: conftest.py  test_cli.py  test_export.py  test_normalize.py  test_parser.py  test_store.py  test_validation.py
skills/local/mesh-import/tests/fixtures/: malformed_desc.xml  sample_desc.xml
skills/local/mesh-import/workspace/migrations/: 0001_init.sql
skills/local/thesaurus/: pyproject.toml
skills/local/thesaurus/src/thesaurus/: __init__.py  audit.py  cli.py  errors.py  factory.py  lite.py  manifest.py  mesh_loader.py  migration.py  protocol.py
skills/local/thesaurus/tests/: conftest.py  test_audit_output.py  test_cli.py  test_duplicate_jsonl_ids.py  test_error_paths.py  test_fts5.py  test_h_b01_rebuild_manifest.py  test_jsonl_format.py  test_list_pagination.py  test_migration.py  test_multi_match_priority.py  test_rebuild.py  test_rebuild_atomic_failure.py  test_search_normalized.py  test_store_invariants.py
skills/local/thesaurus/workspace/: thesaurus.db
skills/local/thesaurus/workspace/migrations/: 0001_init.sql  0002_normalize_terms_relations.sql
skills/local/thesaurus/workspace/vocabulary/: manifest.json  mesh.jsonl.manifest.json  sample.jsonl
templates/: manuscript.qmd  references.bib
tests/: test_packaging_contract.py  test_verify_artifacts.py
validators/: __init__.py  academic_evidence.py  bibliography.py  citation_format.py  citation_verify.py  citations.py  claim_alignment.py  claim_evidence.py  claims.py  code_health.py  contamination_signals.py  ethics.py  gate_verdict.py  method_gate.py  preset.py  prose.py  protocol_generator.py  quality_appraisal.py  refs.py  reporting.py  structure.py  style.py  table_figure.py  writing_quality.py
verification/: REAL_MATERIAL_VALIDATION.md  manifest.example.yaml  run_real_validation.py
(+445 files in other folders)
