[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-writer"
version = "0.1.0"
description = "Scientific search, drafting, validation, and rendering pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1,<2", "pyyaml>=6.0.1"]

# Trifecta is an OPTIONAL external tool for code traceability.
# It is NOT bundled with paper-writer.
# See README.md → "Optional: Trifecta Integration" for install instructions.

[project.scripts]
paper = "cli.paper.main:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.3.0", "mypy>=1.9.0", "types-pyyaml>=6.0.12.12", "tomli>=2.0.0; python_version < '3.11'"]

[tool.setuptools.packages.find]
include = [
  "cli*",
  "harness*",
  "integrations*",
  "validators*",
  "skills*",
  "templates*",
  "styles*",
  "verification*",
  "parsers*",
  "engine*",
  "clients*",
  "rules*",
  "schemas*",
]
exclude = ["skills.local.thesaurus*", "skills.local.mesh_import*"]

[tool.setuptools.package-data]
"templates" = ["*.*", "**/*.*"]
"templates.journals" = ["*.*", "**/*.*"]
"templates.journals.nature" = ["*.*"]
"styles" = ["*.*", "**/*.*"]
"styles.csl" = ["*.*"]
"styles.vale" = ["*.*", "**/*.*", ".vale.ini"]
"styles.vale.paper-writer" = ["*.*"]
"skills" = ["*.*", "**/*.*"]
"skills.imported" = ["*.*", "**/*.*"]
"skills.imported.academic_writer" = ["*.json", "*.md"]
"skills.imported.literature_search" = ["*.*", "**/*.*"]
"skills.imported.literature_search.resources" = ["*.*"]
"skills.local" = ["*.*"]
"verification" = ["*.*", "**/*.*"]
"rules" = ["*.*", "**/*.*"]
"schemas" = ["*.*", "**/*.*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
extend-exclude = [
  "_scratch",
  "tools",
  "skills/local/thesaurus",
  "skills/local/mesh-import",
  "skills/local/science-bundle",
]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E501"]
"skills/local/mesh-import/**" = ["E501", "E741"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# NOTE: Do not run `mypy .` — the repo directory name "paper-writer" contains
# a hyphen and mypy rejects it as a package. Run with explicit package list:
#   mypy harness/ cli/ validators/ integrations/ verification/
exclude = [
  "^(paper-writer|tests)/",
  # Sub-projects with their own pyproject.toml — typecheck separately
  "^skills/local/thesaurus/",
  "^skills/local/mesh-import/",
  "^skills/local/science-bundle/scienceskillscommon/",
  # Legacy science-bundle scripts — no type annotations, not part of core pipeline
  "^skills/local/science-bundle/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "e2e: end-to-end smoke tests (subprocess, real I/O)",
  "integration: integration tests with real adapters on tmp_path",
]
